Fixing hero 3 text area remove overflow

--- a/source/css/scss/patterns/02-molecules/_hero-3.scss
+++ b/source/css/scss/patterns/02-molecules/_hero-3.scss
@@ -126,7 +126,7 @@
     color: #FFF;
     max-height: 280px;
     height: 280px;
-    overflow: auto;
+    overflow: hidden;
     width: 100%;
     padding: 30px;
     @include breakpoint($display_960_up) {
